<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.university.UniversityQueryActivity">

    <TextView
        android:id="@+id/first_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_First"/>

    <EditText
        android:id="@+id/query_First"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result_First"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/second_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_Second"/>

    <EditText
        android:id="@+id/query_Second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result_Second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showResult" />

</LinearLayout>
